# succinct-residency-exps

./: .gitignore  Cargo.toml  Makefile  README.md
algorithms/bls-agg/delphinus/: test.sh
algorithms/bls-agg/native_nexus/: Cargo.toml
algorithms/bls-agg/native_powdr/: cycles.txt
algorithms/bls-agg/wasm_jolt/: cycles.txt
algorithms/bls-verify/native/: cycles.txt
algorithms/bls-verify/native_jolt/: cycles.txt
algorithms/bls-verify/native_powdr/: .gitignore  Cargo.toml
algorithms/bls-verify/native_sp1/program/: Cargo.toml
algorithms/bls-verify/native_sp1/program/src/: main.rs
algorithms/bls-verify/wasm/: Cargo.toml
algorithms/bls-verify/wasm/src/: lib.rs
algorithms/bls-verify/wasm_jolt/: cycles.txt
algorithms/bls-verify/wasm_risc_zero/: cycles.txt
algorithms/ecdsa_verify/native/: Cargo.toml
algorithms/ecdsa_verify/native_nexus/: Cargo.toml
algorithms/ecdsa_verify/native_risc_zero/: cycles.txt
algorithms/ecdsa_verify/native_risc_zero/methods/guest/: Cargo.toml
algorithms/ecdsa_verify/native_risc_zero/methods/guest/src/: main.rs
algorithms/ecdsa_verify/native_sp1/program/: Cargo.toml
algorithms/ecdsa_verify/wasm/: Cargo.toml
algorithms/ecdsa_verify/wasm/src/: lib.rs
algorithms/keccak/delphinus/: .gitignore
algorithms/keccak/native/: Cargo.toml  cycles.txt
algorithms/keccak/native_nexus/: Cargo.toml
algorithms/keccak/native_powdr/: cycles.txt
algorithms/keccak/wasm_jolt/: Cargo.toml
algorithms/keccak/wasm_risc_zero/: cycles.txt
algorithms/merkle/delphinus/: test.sh
algorithms/merkle/native_jolt/: Cargo.toml
algorithms/merkle/native_nexus/: Cargo.toml
algorithms/merkle/native_powdr/: cycles.txt
algorithms/merkle/native_sp1/program/: Cargo.toml
algorithms/merkle/wasm/: Cargo.toml
algorithms/merkle/wasm_jolt/: cycles.txt
algorithms/merkle_proof/delphinus/: Cargo.toml
algorithms/merkle_proof/native/: cycles.txt
algorithms/merkle_proof/native_nexus/: Cargo.toml
algorithms/merkle_proof/wasm_jolt/: Cargo.toml
algorithms/merkle_proof/wasm_risc_zero/: cycles.txt
algorithms/nth_prime/delphinus/: cargo.toml  test.sh
algorithms/nth_prime/native/: cycles.txt
algorithms/nth_prime/native_powdr/: Cargo.toml  cycles.txt
algorithms/nth_prime/native_risc_zero/: cycles.txt
algorithms/nth_prime/native_sp1/: .gitignore
algorithms/nth_prime/valida/: README.md
algorithms/nth_prime/wasm/: .gitignore
algorithms/nth_prime/wasm_nexus/: Cargo.toml
algorithms/nth_prime/wasm_risc_zero/: cycles.txt
algorithms/poseidon/delphinus/: cargo.toml  test.sh
algorithms/poseidon/native/: Cargo.toml
algorithms/poseidon/native_jolt/: cycles.txt
algorithms/poseidon/native_nexus/: Cargo.toml
algorithms/poseidon/native_powdr/: cycles.txt
algorithms/poseidon/native_risc_zero/: cycles.txt
algorithms/poseidon/native_sp1/program/: Cargo.toml
algorithms/poseidon/native_sp1/program/src/: main.rs
binary/asc/: bin_search.ts  binary-zk.wasm  run.sh
binary/go/: README.md
binary/go/wasm/: README.md  go.mod  go.sum  main.go  main.wasm
binary/go/wasm_sp1/: .gitgnore
binary/js/: README.md  bun.lockb  index.ts  package.json
binary/rust/: Cargo.toml  build.sh  run.sh
binary/rust/executor/: Cargo.toml
binary/rust/native/: Cargo.toml  cycles.txt
binary/rust/native_jolt/: Cargo.toml  cycles.txt
binary/rust/native_risc_zero/: cycles.txt
binary/rust/script/: Cargo.toml
binary/rust/src/: main.rs
bls-verify/rust/delphinus/: Cargo.toml  cargo.toml  test.sh
bls-verify/rust/delphinus/src/: lib.rs
bls-verify/rust/native_risc_zero/methods/guest/: Cargo.toml
bls-verify/rust/native_risc_zero/methods/guest/src/: main.rs
ecdsa_verify/rust/native_sp1/program/: Cargo.toml
ecdsa_verify/rust/native_sp1/program/src/: main.rs
ecdsa_verify/rust/wasm/: Cargo.toml
ecdsa_verify/rust/wasm/src/: lib.rs
eth_verify/go/: .env  go.mod  go.sum  main.go
eth_verify/js/: bun.lockb  index.ts  package.json
eth_verify/rust/: Cargo.toml
eth_verify/rust/native/: .gitignore  Cargo.toml  cycles.txt
eth_verify/rust/native/src/: lib.rs  main.rs
eth_verify/rust/native_jolt/guest/: Cargo.toml
eth_verify/rust/native_jolt/guest/src/: lib.rs
eth_verify/rust/native_risc_zero/host/: Cargo.toml
eth_verify/rust/native_risc_zero/host/src/: main.rs
eth_verify/rust/native_sp1/program/: Cargo.toml
eth_verify/rust/native_sp1/program/elf/: riscv32im-succinct-zkvm-elf
eth_verify/rust/native_sp1/program/src/: main.rs
eth_verify/rust/native_sp1/script/: Cargo.toml  cycles.txt  graph.json
eth_verify/rust/native_sp1/script/src/: main.rs
eth_verify/rust/src/: lib.rs  (+1 more)
eth_verify/rust/wasm/: Cargo.toml
eth_verify/rust/wasm/src/: lib.rs
eth_verify/rust/wasm_sp1/script/: Cargo.toml  cycles.txt
eth_verify/rust/wasm_sp1/script/src/: main.rs
go/binary/: main.go
go/merkle/: README.md  main.go
go/prime/: go.mod  main.go
go/tsp/: go.mod  main.go
inputs/: binary.json  block.json  block_data.json  bls_agg.json  bls_verify.json  bls_verify_128.json  bls_verify_16.json  bls_verify_64.json  merkle.json  nth_prime.json  poseidon.json  prime.json  tsp.json  tsp_10.json
js/binary/: package.json
js/eth_verify/: README.md  bun.lockb  index.ts
js/merkle/: bun.lockb  index.ts  package.json
js/prime/: README.md  bun.lockb  index.ts  package.json
js/tsp/: README.md  bun.lockb  index.ts
keccak/rust/native_sp1/program/: Cargo.toml
merkle/go/: go.mod  go.sum
merkle/js/: README.md
merkle/rust/: Cargo.toml
nth_fibonacci/: fib.wasm
nth_fibonacci/nexus_zkvm/: Cargo.toml
nth_fibonacci/plain_wat/: Cargo.toml  nth_fib.wat
nth_fibonacci/risc_zero_wasm/: Cargo.toml
nth_fibonacci/risc_zero_zkvm/: profile.pb
poseidon/rust/native_risc_zero/methods/guest/: Cargo.toml
poseidon/rust/native_risc_zero/methods/guest/src/: main.rs
poseidon/rust/wasm/: Cargo.toml
poseidon/rust/wasm/src/: lib.rs
prime/asc/: is_prime.ts  prime-zk.wasm  run.sh
prime/go/: README.md
rust/binary/: Cargo.toml
rust/eth_verify/: Cargo.toml  block_data.json
rust/merkle/: Cargo.toml
rust/prime/: Cargo.toml
tsp/go/: README.md
tsp/rust/: Cargo.toml
(+497 files in other folders)
