[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm"
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2"
bls12_381 = { version = "0.8.0", features = ["experimental"] }
sha2 = "0.9.8"
hkdf = "0.11"
thiserror = "1.0.64"
hex = "0.4.3"
group = "0.13.0"
pairing = "0.23.0"
serde_cbor = "0.11.2"
serde = { version = "1.0.210", features = ["derive"] }


