[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm"
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2"
k256 = { version = "=0.13.3", default-features = false, features = ["ecdsa"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
sha2 = "0.10.8"