[package]
name = "zkwasm-bls-verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bls_verify"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.9.8"
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git" }
wasm-bindgen = "0.2.83"
wasm = { path = "../wasm" }
bls12_381 = { version = "0.8.0", features = ["experimental"] }
group = "0.13.0"
hkdf = "0.11"
pairing = "0.23.0"
hex = "0.4.3"

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
rustflags = ["-C", "link-arg=--shared"]
