[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm"
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2"
alloy-primitives = { version = "0.8.5", default-features = false, features = ["k256"] }
k256 = { version = "=0.13.3", default-features = false, features = ["ecdsa"] }
ark-std = "0.4.0"