[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm"
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2"
k256 = { version = "=0.13.3", default-features = false, features = ["ecdsa"] }
hex-literal = "0.4.1"
sha3 = { version = "=0.10.8", default-features = false }
crypto-common = { version = "*", default-features = false }