[package]
name = "eth_verify"
version = "0.1.0"
edition = "2021"

[dependencies]
patricia-trie = "0.3.0"
alloy-consensus = "0.4.2"
alloy-eips = "0.4.2"
alloy-primitives = "0.8.5"
alloy-rlp = "0.3.8"
alloy-rpc-types = "0.4.2"
alloy-serde = "0.4.2"
alloy-trie = "0.6.0"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }
rlp = "0.6.1"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.39.0", features = ["full"] }
bigint = "4.4.3"
num-bigint = "0.4.6"
bytes = "1.7.2"
ethereum-types = "0.15.1"

[lib]
name = "eth_verify"
path = "src/lib.rs"

