[package]
name = "eth_verify"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8.5"
alloy-rlp = "0.3.8"
alloy-rpc-types = "0.4.2"
alloy-serde = "0.4.2"
alloy-trie = "0.6.0"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
rlp = "0.6.1"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.39.0", features = ["full"] }
bytes = "1.7.2"
ethereum-types = "0.15.1"
dotenv = "0.15.0"

[lib]
name = "eth_verify"
path = "src/lib.rs"

