[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm"
crate-type = ["cdylib", "lib"]

[dependencies]
alloy-primitives = { version = "0.8.5", default-features = false, features = ["k256"] }
alloy-rlp = "0.3.8"
alloy-serde = "0.4.2"
serde = "1.0.210"
serde_json = "1.0.128"
alloy-trie = "0.6.0"
hex = "0.4.3"
rlp = "0.6.1"
bytes = "1.7.2"
wasm-bindgen = "0.2"

