[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm"
crate-type = ["cdylib", "lib"]

[dependencies]
# Patch getrandom to a dummy implementation since it's not used but breaks the Wasm build
# ref: https://github.com/rust-random/getrandom/issues/208#issuecomment-791896409
# ref: https://stackoverflow.com/a/72447475
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
alloy-primitives = { version = "0.8.5", default-features = false, features = ["k256"] }
alloy-rlp = "0.3.8"
alloy-serde = "0.4.2"
serde = "1.0.210"
serde_json = "1.0.128"
alloy-trie = "0.6.0"
hex = "0.4.3"
rlp = "0.6.1"
bytes = "1.7.2"
wasm-bindgen = "0.2"

# https://docs.succinct.xyz/writing-programs/patched-crates.html
[patch.crates-io]
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }