[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm"
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2"
starknet-crypto = { version = "0.7.2", default-features = false, features = ["alloc"] }
starknet-types-core = { version = "0.1.6", default-features = false, features = ["alloc"] }