[workspace]
[package]
version = "0.1.0"
name = "bls-agg-native-program"
edition = "2021"

[dependencies]
sp1-zkvm = "2.0.0"
wasm = { path = "../../wasm" }
sp1-derive = "2.0.0"

[patch.crates-io]
sha2-v0-9-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.9.8" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", branch = "patch-v0.8.0" }