[workspace]
[package]
version = "0.1.0"
name = "ecdsa_verify-native_sp1-program"
edition = "2021"

[dependencies]
sp1-zkvm = "2.0.0"
wasm = { path = "../../wasm" }
sp1-derive = "2.0.0"

# https://docs.succinct.xyz/writing-programs/patched-crates.html
[patch.crates-io]
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-patch-v1" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "crypto_bigint-v0.5.5-patch-v1" }

