[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["guest-std"]}
wasm = { path = "../../wasm" }
alloy-primitives = "0.8.5"
serde_json = "1.0.90"
hex = "0.4.3"