[workspace]
[package]
version = "0.1.0"
name = "eth-verify-native-program"
edition = "2021"

[dependencies]
sp1-zkvm = "2.0.0"
wasm= { path = "../../wasm" }
sp1-derive = "2.0.0"
alloy-primitives = "0.8.5"

# https://docs.succinct.xyz/writing-programs/patched-crates.html
[patch.crates-io]
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", branch = "patch-v0.5.5" }
