[workspace]
[package]
version = "0.1.0"
name = "eth-verify-native-script"
edition = "2021"

[dependencies]
sp1-sdk = "2.0.0"
clap = { version = "4.0", features = ["derive", "env"] }
serde_json = "1.0.128"
hex = "0.4.3"
rand = "0.8.5"
wasm = { path = "../../wasm" }
serde = "1.0.210"
alloy-primitives = "0.8.5"

[build-dependencies]
sp1-helper = "2.0.0"

