[workspace]
[package]
version = "0.1.0"
name = "eth-verify-rust-script"
edition = "2021"

[dependencies]
sp1-sdk = "2.0.0"
clap = { version = "4.0", features = ["derive", "env"] }
serde_json = "1.0.128"
wasm = { path = "../../wasm" }
alloy-primitives = "0.8.7"
serde = "1.0.210"

[build-dependencies]
sp1-helper = "2.0.0"
