[workspace]
[package]
version = "0.1.0"
name = "keccak-native_sp1-program"
edition = "2021"

[dependencies]
sp1-zkvm = "2.0.0"
wasm = { path = "../../wasm" }
sp1-derive = "2.0.0"

# https://docs.succinct.xyz/writing-programs/patched-crates.html
[patch.crates-io]
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", branch = "patch-sha3-v0.10.8" }