[package]
name = "ecdsa_verify-native_risc_zero-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
k256 = { version = "=0.13.3", default-features = false, features = ["ecdsa"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
sha2 = "0.10.8"

# https://dev.risczero.com/api/zkvm/acceleration
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
