[package]
name = "poseidon-native_risc_zero-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
wasm = { path = "../../../wasm" }

# https://dev.risczero.com/api/zkvm/acceleration
[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }